<resources>
    <string name="app_name">DirectorioEmpleado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="area">Area</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="direccion">Dirección</string>
    <string name="nomina">Nomina</string>
    <string name="puesto">Puesto</string>
    <string name="estado_civil">Estado civil</string>
    <string name="curp">Curp</string>
    <string name="nss">Nss</string>
    <string name="cronicas">Cronicas</string>
    <string name="contEmergencia">Cont emergencia</string>
    <string name="escolaridad">Escolaridad</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="status">Status</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>

</resources>
